// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test of HomePage > Snapshot test: HomePage has not changed design 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="home-page m-0 flex flex-col justify-start items-center w-full min-h-[180vh] overflow-x-hidden gap-16"
        style="box-shadow: inset 0 0 0 1000px rgba(16, 16, 16, 0.6); transition: box-shadow 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
      >
        <figure
          class="fixed top-0 left-0 mt-8 ml-8 w-16 h-auto z-9998"
        >
          <img
            alt="Film Rateren Logo"
            class="cursor-pointer"
            src="/project2/src/assets/film_rateren.svg"
            style="opacity: 0; pointer-events: none; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
          />
        </figure>
        <main
          class="bg-screen flex flex-col justify-start items-center relative"
          style="box-shadow: 0 0 40px 1px rgba(255, 247, 238, 0.9); height: 382px; width: 700px; margin-top: 96px; border-radius: 10px; transition: height 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), width 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
        >
          <figure
            class="absolute flex flex-row justify-center"
          >
            <img
              alt="screenContent"
              src="/project2/src/assets/medium_screen.svg"
              style="opacity: 1; height: 380px; margin-top: 0px; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), height 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
            />
          </figure>
          <section
            class="absolute z-50"
            id="autocomplete-search-bar"
            style="opacity: 1; margin-top: 250px; width: 380px; left: 165px; pointer-events: auto; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), width 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), left 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
          >
            <div
              class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon MuiAutocomplete-variantOutlined MuiAutocomplete-colorNeutral MuiAutocomplete-sizeMd h-14 bg-white p-2 css-1s0r8hv-JoyAutocomplete-root"
            >
              <div
                class="MuiAutocomplete-wrapper css-n43o-JoyAutocomplete-wrapper"
              >
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  autocapitalize="none"
                  autocomplete="off"
                  class="MuiAutocomplete-input css-1epe1tr-JoyAutocomplete-input"
                  id=":r1:"
                  placeholder="Tittel..."
                  role="combobox"
                  spellcheck="false"
                  value=""
                />
              </div>
              <button
                aria-label="Open"
                class="MuiAutocomplete-popupIndicator css-1ghvixx-JoyAutocomplete-popupIndicator"
                tabindex="-1"
                title="Open"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-sizeMd css-1r2bn3-JoySvgIcon-root"
                  data-testid="ArrowDropDownIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </button>
            </div>
          </section>
          <section
            class="absolute z-50"
            style="opacity: 0; margin-top: 250px; left: 165px; pointer-events: none; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), left 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
          >
            <div
              class="MuiFormControl-root MuiTextField-root bg-white rounded fixed css-kwy434-MuiFormControl-root-MuiTextField-root"
              style="width: 380px;"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for="new-search-bar"
                id="new-search-bar-label"
              >
                Tittel...
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-48zdse-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                  id="new-search-bar"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      Tittel...
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </section>
          <section
            class="absolute"
            style="opacity: 0; right: 255px; margin-top: 245px; pointer-events: none; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), right 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
          >
            <div
              class="MuiFormControl-root bg-white rounded css-1sojgr-MuiFormControl-root"
              id="filter"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-87pam3-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for="filter"
                id="filterLabel"
              >
                Sjanger
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  css-2m3a8v-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
              >
                <div
                  aria-controls=":r5:"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="filterLabel"
                  class="MuiSelect-select MuiSelect-outlined MuiSelect-multiple MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                  role="combobox"
                  tabindex="0"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </div>
                <input
                  aria-hidden="true"
                  aria-invalid="false"
                  class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                  data-testid="ArrowDropDownIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      Sjanger
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </section>
          <section
            class="absolute"
            style="opacity: 0; right: 255px; margin-top: 245px; pointer-events: none; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), right 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
          >
            <div
              class="MuiFormControl-root bg-white rounded css-1sojgr-MuiFormControl-root"
              id="filter"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-87pam3-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for="filter"
                id="filterLabel"
              >
                Streaming
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  css-2m3a8v-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
              >
                <div
                  aria-controls=":r7:"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="filterLabel"
                  class="MuiSelect-select MuiSelect-outlined MuiSelect-multiple MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                  role="combobox"
                  tabindex="0"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </div>
                <input
                  aria-hidden="true"
                  aria-invalid="false"
                  class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                  data-testid="ArrowDropDownIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      Streaming
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </section>
          <section
            class="absolute"
            style="opacity: 0; right: 145px; margin-top: 245px; pointer-events: none; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), right 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
          >
            <div
              class="MuiFormControl-root bg-white css-1sojgr-MuiFormControl-root"
              id="sort-select"
            >
              <label
                aria-label="Sortering"
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-87pam3-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for="sort-select"
                id="sort-select-label"
              >
                Sortering
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  css-2m3a8v-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
              >
                <div
                  aria-controls=":r9:"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="sort-select-label"
                  class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                  role="combobox"
                  tabindex="0"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </div>
                <input
                  aria-hidden="true"
                  aria-invalid="false"
                  class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                  data-testid="ArrowDropDownIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      Sortering
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </section>
          <section
            class="absolute flex flex-row justify-center items-center"
            style="opacity: 0; margin-top: 100px; right: 115px; pointer-events: none;"
          >
            <p
              class="text-zinc-800"
            >
              Fjern filmer uten data
            </p>
            <span
              class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-nvimzm-MuiButtonBase-root-MuiCheckbox-root"
              data-mui-internal-clone-element="true"
            >
              <input
                class="PrivateSwitchBase-input css-1m9pwf3"
                data-indeterminate="false"
                tabindex="-1"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="CheckBoxOutlineBlankIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </span>
          </section>
          <section
            class="absolute z-999"
            style="margin-top: 250px; right: 300px; opacity: 0; pointer-events: none; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), right 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
          >
            <button
              class="bg-darkgrey rounded-base text-white p-2 px-4 border-2 border-transparent cursor-pointer transition duration-250 hover:border-[rgb(41,93,227)] focus:outline-none focus:ring focus:border-[rgb(41,93,227)]"
              disabled=""
              style="min-height: 0rem; width: 64px; transition: min-height 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), width 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
            >
              Søk
            </button>
          </section>
          <button
            class="absolute bg-darkgrey rounded-base text-small text-white p-1 px-3 border-transparent cursor-pointer transition duration-250 hover:border-[rgb(41,93,227)] focus:outline-none focus:ring focus:border-[rgb(41,93,227)]"
            style="opacity: 0; margin-top: 50px; right: 100px; height: 54px; width: 64px; pointer-events: none;"
          >
            Reset
          </button>
        </main>
        <button
          class="text-[rgba(255,247,238,0.8)] fixed hover:scale-105 top-[92%] flex flex-col justify-center items-center text-base"
          style="opacity: 1; pointer-events: auto; text-shadow: 0 0 20px rgba(255, 247, 238, 0.6);"
        >
          Bla ned for avansert søk
          <span>
            ↓
          </span>
        </button>
        <img
          alt="seats"
          src="/project2/src/assets/seats.png"
          style="opacity: 1; margin-top: 60px; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
        />
        <section
          class="absolute flex flex-wrap flex-row justify-center w-[83%] gap-14 text-white"
          style="opacity: 0; top: 645px; pointer-events: none; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
        >
          <div
            class="absolute top-[200px] flex justify-center"
            style="height: 50000px; width: 100%;"
          />
          <div
            class="flex justify-center items-center w-full"
          >
            <span
              class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-variantSoft MuiCircularProgress-sizeMd css-t8wayp-JoyCircularProgress-root"
              role="progressbar"
              style="--CircularProgress-percent: 25;"
            >
              <svg
                class="MuiCircularProgress-svg css-qw6zo9-JoyCircularProgress-svg"
              >
                <circle
                  class="MuiCircularProgress-track css-zitgxn-JoyCircularProgress-track"
                />
                <circle
                  class="MuiCircularProgress-progress css-v8oslq-JoyCircularProgress-progress"
                />
              </svg>
            </span>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="home-page m-0 flex flex-col justify-start items-center w-full min-h-[180vh] overflow-x-hidden gap-16"
      style="box-shadow: inset 0 0 0 1000px rgba(16, 16, 16, 0.6); transition: box-shadow 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
    >
      <figure
        class="fixed top-0 left-0 mt-8 ml-8 w-16 h-auto z-9998"
      >
        <img
          alt="Film Rateren Logo"
          class="cursor-pointer"
          src="/project2/src/assets/film_rateren.svg"
          style="opacity: 0; pointer-events: none; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
        />
      </figure>
      <main
        class="bg-screen flex flex-col justify-start items-center relative"
        style="box-shadow: 0 0 40px 1px rgba(255, 247, 238, 0.9); height: 382px; width: 700px; margin-top: 96px; border-radius: 10px; transition: height 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), width 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
      >
        <figure
          class="absolute flex flex-row justify-center"
        >
          <img
            alt="screenContent"
            src="/project2/src/assets/medium_screen.svg"
            style="opacity: 1; height: 380px; margin-top: 0px; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), height 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
          />
        </figure>
        <section
          class="absolute z-50"
          id="autocomplete-search-bar"
          style="opacity: 1; margin-top: 250px; width: 380px; left: 165px; pointer-events: auto; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), width 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), left 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
        >
          <div
            class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon MuiAutocomplete-variantOutlined MuiAutocomplete-colorNeutral MuiAutocomplete-sizeMd h-14 bg-white p-2 css-1s0r8hv-JoyAutocomplete-root"
          >
            <div
              class="MuiAutocomplete-wrapper css-n43o-JoyAutocomplete-wrapper"
            >
              <input
                aria-autocomplete="list"
                aria-expanded="false"
                autocapitalize="none"
                autocomplete="off"
                class="MuiAutocomplete-input css-1epe1tr-JoyAutocomplete-input"
                id=":r1:"
                placeholder="Tittel..."
                role="combobox"
                spellcheck="false"
                value=""
              />
            </div>
            <button
              aria-label="Open"
              class="MuiAutocomplete-popupIndicator css-1ghvixx-JoyAutocomplete-popupIndicator"
              tabindex="-1"
              title="Open"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-sizeMd css-1r2bn3-JoySvgIcon-root"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </button>
          </div>
        </section>
        <section
          class="absolute z-50"
          style="opacity: 0; margin-top: 250px; left: 165px; pointer-events: none; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), left 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
        >
          <div
            class="MuiFormControl-root MuiTextField-root bg-white rounded fixed css-kwy434-MuiFormControl-root-MuiTextField-root"
            style="width: 380px;"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for="new-search-bar"
              id="new-search-bar-label"
            >
              Tittel...
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-48zdse-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                id="new-search-bar"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-yjsfm1"
                >
                  <span>
                    Tittel...
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </section>
        <section
          class="absolute"
          style="opacity: 0; right: 255px; margin-top: 245px; pointer-events: none; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), right 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
        >
          <div
            class="MuiFormControl-root bg-white rounded css-1sojgr-MuiFormControl-root"
            id="filter"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-87pam3-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for="filter"
              id="filterLabel"
            >
              Sjanger
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  css-2m3a8v-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
            >
              <div
                aria-controls=":r5:"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="filterLabel"
                class="MuiSelect-select MuiSelect-outlined MuiSelect-multiple MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                aria-invalid="false"
                class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-yjsfm1"
                >
                  <span>
                    Sjanger
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </section>
        <section
          class="absolute"
          style="opacity: 0; right: 255px; margin-top: 245px; pointer-events: none; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), right 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
        >
          <div
            class="MuiFormControl-root bg-white rounded css-1sojgr-MuiFormControl-root"
            id="filter"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-87pam3-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for="filter"
              id="filterLabel"
            >
              Streaming
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  css-2m3a8v-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
            >
              <div
                aria-controls=":r7:"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="filterLabel"
                class="MuiSelect-select MuiSelect-outlined MuiSelect-multiple MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                aria-invalid="false"
                class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-yjsfm1"
                >
                  <span>
                    Streaming
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </section>
        <section
          class="absolute"
          style="opacity: 0; right: 145px; margin-top: 245px; pointer-events: none; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), right 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
        >
          <div
            class="MuiFormControl-root bg-white css-1sojgr-MuiFormControl-root"
            id="sort-select"
          >
            <label
              aria-label="Sortering"
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-87pam3-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for="sort-select"
              id="sort-select-label"
            >
              Sortering
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  css-2m3a8v-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
            >
              <div
                aria-controls=":r9:"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="sort-select-label"
                class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                aria-invalid="false"
                class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-yjsfm1"
                >
                  <span>
                    Sortering
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </section>
        <section
          class="absolute flex flex-row justify-center items-center"
          style="opacity: 0; margin-top: 100px; right: 115px; pointer-events: none;"
        >
          <p
            class="text-zinc-800"
          >
            Fjern filmer uten data
          </p>
          <span
            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-nvimzm-MuiButtonBase-root-MuiCheckbox-root"
            data-mui-internal-clone-element="true"
          >
            <input
              class="PrivateSwitchBase-input css-1m9pwf3"
              data-indeterminate="false"
              tabindex="-1"
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="CheckBoxOutlineBlankIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </span>
        </section>
        <section
          class="absolute z-999"
          style="margin-top: 250px; right: 300px; opacity: 0; pointer-events: none; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), right 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
        >
          <button
            class="bg-darkgrey rounded-base text-white p-2 px-4 border-2 border-transparent cursor-pointer transition duration-250 hover:border-[rgb(41,93,227)] focus:outline-none focus:ring focus:border-[rgb(41,93,227)]"
            disabled=""
            style="min-height: 0rem; width: 64px; transition: min-height 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), width 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
          >
            Søk
          </button>
        </section>
        <button
          class="absolute bg-darkgrey rounded-base text-small text-white p-1 px-3 border-transparent cursor-pointer transition duration-250 hover:border-[rgb(41,93,227)] focus:outline-none focus:ring focus:border-[rgb(41,93,227)]"
          style="opacity: 0; margin-top: 50px; right: 100px; height: 54px; width: 64px; pointer-events: none;"
        >
          Reset
        </button>
      </main>
      <button
        class="text-[rgba(255,247,238,0.8)] fixed hover:scale-105 top-[92%] flex flex-col justify-center items-center text-base"
        style="opacity: 1; pointer-events: auto; text-shadow: 0 0 20px rgba(255, 247, 238, 0.6);"
      >
        Bla ned for avansert søk
        <span>
          ↓
        </span>
      </button>
      <img
        alt="seats"
        src="/project2/src/assets/seats.png"
        style="opacity: 1; margin-top: 60px; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), margin-top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
      />
      <section
        class="absolute flex flex-wrap flex-row justify-center w-[83%] gap-14 text-white"
        style="opacity: 0; top: 645px; pointer-events: none; transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), top 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);"
      >
        <div
          class="absolute top-[200px] flex justify-center"
          style="height: 50000px; width: 100%;"
        />
        <div
          class="flex justify-center items-center w-full"
        >
          <span
            class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-variantSoft MuiCircularProgress-sizeMd css-t8wayp-JoyCircularProgress-root"
            role="progressbar"
            style="--CircularProgress-percent: 25;"
          >
            <svg
              class="MuiCircularProgress-svg css-qw6zo9-JoyCircularProgress-svg"
            >
              <circle
                class="MuiCircularProgress-track css-zitgxn-JoyCircularProgress-track"
              />
              <circle
                class="MuiCircularProgress-progress css-v8oslq-JoyCircularProgress-progress"
              />
            </svg>
          </span>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test of MovieCard > Snapshot test: MovieCard has not changed design 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="movie-card grid max-h-full gap-7 md:mt-6 ml-2 text-white italic place-items-center "
      >
        <div
          style="display: flex; column-gap: 1rem;"
        >
          <span
            role="button"
          >
            <button
              aria-label="start"
              class="text-medium sm:text-large md:text-xl transform hover:scale-125 transition-transform"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M892.1 737.8l-110.3-63.7a15.9 15.9 0 0 0-21.7 5.9l-19.9 34.5c-4.4 7.6-1.8 17.4 5.8 21.8L856.3 800a15.9 15.9 0 0 0 21.7-5.9l19.9-34.5c4.4-7.6 1.7-17.4-5.8-21.8zM760 344a15.9 15.9 0 0 0 21.7 5.9L892 286.2c7.6-4.4 10.2-14.2 5.8-21.8L878 230a15.9 15.9 0 0 0-21.7-5.9L746 287.8a15.99 15.99 0 0 0-5.8 21.8L760 344zm174 132H806c-8.8 0-16 7.2-16 16v40c0 8.8 7.2 16 16 16h128c8.8 0 16-7.2 16-16v-40c0-8.8-7.2-16-16-16zM625.9 115c-5.9 0-11.9 1.6-17.4 5.3L254 352H90c-8.8 0-16 7.2-16 16v288c0 8.8 7.2 16 16 16h164l354.5 231.7c5.5 3.6 11.6 5.3 17.4 5.3 16.7 0 32.1-13.3 32.1-32.1V147.1c0-18.8-15.4-32.1-32.1-32.1z"
                />
              </svg>
            </button>
          </span>
          <span
            role="button"
          >
            <button
              aria-label="stop"
              class="text-medium sm:text-large md:text-xl transform hover:scale-125 transition-transform"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 388c-72.597 0-132-59.405-132-132 0-72.601 59.403-132 132-132 36.3 0 69.299 15.4 92.406 39.601L278 234h154V80l-51.698 51.702C348.406 99.798 304.406 80 256 80c-96.797 0-176 79.203-176 176s78.094 176 176 176c81.045 0 148.287-54.134 169.401-128H378.85c-18.745 49.561-67.138 84-122.85 84z"
                />
              </svg>
            </button>
          </span>
        </div>
        <h1
          class="text-base sm:text-medium md:text-large lg:text-xl "
        >
          Sample Movie
        </h1>
        <div
          class="grid grid-cols-1 md:grid-cols-2 gap-4 w-2/3 mb-2  "
        >
          <figure
            class=" flex justify-center items-start mt-5 md:justify-end  max-w-full"
          >
            <img
              alt="Sample Movie"
              class="w-3/4 md:w-96 h-auto object-contain rounded-lg shadow-2xl"
              src="https://example.com/poster.jpg"
            />
          </figure>
          <section
            class="mt-4 text-small sm:text-baseSmall md:text-baseSmall lg:text-base pl-4"
          >
            <div
              class="mb-2"
            >
              <strong
                class="font-bold"
              >
                Sjanger: 
              </strong>
               
              Action
            </div>
            <div
              class="mb-2"
            >
              <strong
                class="font-bold"
              >
                Regi: 
              </strong>
               
              Director 1
            </div>
            <div
              class="mb-2"
            >
              <strong
                class="font-bold"
              >
                Utgivelsesår: 
              </strong>
               
              2023
            </div>
            <div
              class="mb-2"
            >
              <strong
                class="font-bold"
              >
                Varighet: 
              </strong>
               
              120 min
            </div>
            <div>
              <strong
                class="font-bold"
              >
                Beskrivelse: 
              </strong>
               
              Sample plot of the movie.
            </div>
            <div
              class="mt-5 mb-2"
            >
              <strong
                class="font-bold"
              >
                IMDB-rating:
              </strong>
               
              7.5 / 10 (10K)
            </div>
            <strong
              class="font-bold"
            >
              Bruker-rating:
            </strong>
             
            2.5 / 5.0
            <figure
              class="flex text-yellow"
            >
              <div
                class="stars"
              >
                <span>
                  ★
                </span>
                <span>
                  ★
                </span>
                <span>
                  ★
                </span>
                <span>
                  ☆
                </span>
                <span>
                  ☆
                </span>
              </div>
            </figure>
            <button
              class="mt-5 rounded-base w-24 h-8 sm:w-36 sm:h-12 md:w-44 md:h-14 text-white text-small sm:text-base md:text-lg border-2 border-yellow hover:scale-110 hover:bg-darkpurple"
            >
              Rate filmen
            </button>
          </section>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="movie-card grid max-h-full gap-7 md:mt-6 ml-2 text-white italic place-items-center "
    >
      <div
        style="display: flex; column-gap: 1rem;"
      >
        <span
          role="button"
        >
          <button
            aria-label="start"
            class="text-medium sm:text-large md:text-xl transform hover:scale-125 transition-transform"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M892.1 737.8l-110.3-63.7a15.9 15.9 0 0 0-21.7 5.9l-19.9 34.5c-4.4 7.6-1.8 17.4 5.8 21.8L856.3 800a15.9 15.9 0 0 0 21.7-5.9l19.9-34.5c4.4-7.6 1.7-17.4-5.8-21.8zM760 344a15.9 15.9 0 0 0 21.7 5.9L892 286.2c7.6-4.4 10.2-14.2 5.8-21.8L878 230a15.9 15.9 0 0 0-21.7-5.9L746 287.8a15.99 15.99 0 0 0-5.8 21.8L760 344zm174 132H806c-8.8 0-16 7.2-16 16v40c0 8.8 7.2 16 16 16h128c8.8 0 16-7.2 16-16v-40c0-8.8-7.2-16-16-16zM625.9 115c-5.9 0-11.9 1.6-17.4 5.3L254 352H90c-8.8 0-16 7.2-16 16v288c0 8.8 7.2 16 16 16h164l354.5 231.7c5.5 3.6 11.6 5.3 17.4 5.3 16.7 0 32.1-13.3 32.1-32.1V147.1c0-18.8-15.4-32.1-32.1-32.1z"
              />
            </svg>
          </button>
        </span>
        <span
          role="button"
        >
          <button
            aria-label="stop"
            class="text-medium sm:text-large md:text-xl transform hover:scale-125 transition-transform"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 388c-72.597 0-132-59.405-132-132 0-72.601 59.403-132 132-132 36.3 0 69.299 15.4 92.406 39.601L278 234h154V80l-51.698 51.702C348.406 99.798 304.406 80 256 80c-96.797 0-176 79.203-176 176s78.094 176 176 176c81.045 0 148.287-54.134 169.401-128H378.85c-18.745 49.561-67.138 84-122.85 84z"
              />
            </svg>
          </button>
        </span>
      </div>
      <h1
        class="text-base sm:text-medium md:text-large lg:text-xl "
      >
        Sample Movie
      </h1>
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-4 w-2/3 mb-2  "
      >
        <figure
          class=" flex justify-center items-start mt-5 md:justify-end  max-w-full"
        >
          <img
            alt="Sample Movie"
            class="w-3/4 md:w-96 h-auto object-contain rounded-lg shadow-2xl"
            src="https://example.com/poster.jpg"
          />
        </figure>
        <section
          class="mt-4 text-small sm:text-baseSmall md:text-baseSmall lg:text-base pl-4"
        >
          <div
            class="mb-2"
          >
            <strong
              class="font-bold"
            >
              Sjanger: 
            </strong>
             
            Action
          </div>
          <div
            class="mb-2"
          >
            <strong
              class="font-bold"
            >
              Regi: 
            </strong>
             
            Director 1
          </div>
          <div
            class="mb-2"
          >
            <strong
              class="font-bold"
            >
              Utgivelsesår: 
            </strong>
             
            2023
          </div>
          <div
            class="mb-2"
          >
            <strong
              class="font-bold"
            >
              Varighet: 
            </strong>
             
            120 min
          </div>
          <div>
            <strong
              class="font-bold"
            >
              Beskrivelse: 
            </strong>
             
            Sample plot of the movie.
          </div>
          <div
            class="mt-5 mb-2"
          >
            <strong
              class="font-bold"
            >
              IMDB-rating:
            </strong>
             
            7.5 / 10 (10K)
          </div>
          <strong
            class="font-bold"
          >
            Bruker-rating:
          </strong>
           
          2.5 / 5.0
          <figure
            class="flex text-yellow"
          >
            <div
              class="stars"
            >
              <span>
                ★
              </span>
              <span>
                ★
              </span>
              <span>
                ★
              </span>
              <span>
                ☆
              </span>
              <span>
                ☆
              </span>
            </div>
          </figure>
          <button
            class="mt-5 rounded-base w-24 h-8 sm:w-36 sm:h-12 md:w-44 md:h-14 text-white text-small sm:text-base md:text-lg border-2 border-yellow hover:scale-110 hover:bg-darkpurple"
          >
            Rate filmen
          </button>
        </section>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test of RatingCard > Snapshot test: RatingCard has not changed design 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="rating-card shadow-2xl rounded-2xl space-y-2 p-3 pb-5 w-full bg-black bg-opacity-15 bg-blend-lighten"
      >
        <div
          class="relative z-10"
        >
          <h2
            class=" ml-4 pt-2 sm:text-base md:text-medium text-small text-white font-bold"
          >
            User1
          </h2>
          <figure
            class="ml-4 flex justify-start space-x-1"
          >
            <span
              class="sm:text-base md:text-2xl text:medium text-yellow"
            >
              ★
            </span>
            <span
              class="sm:text-base md:text-2xl text:medium text-yellow"
            >
              ★
            </span>
            <span
              class="sm:text-base md:text-2xl text:medium text-yellow"
            >
              ★
            </span>
            <span
              class="sm:text-base md:text-2xl text:medium text-lightgrey"
            >
              ★
            </span>
            <span
              class="sm:text-base md:text-2xl text:medium text-lightgrey"
            >
              ★
            </span>
          </figure>
          <h3
            class="mt-2 ml-4 text-white sm:text-base md:text-base text-md italic"
          >
            Great movie!
          </h3>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="rating-card shadow-2xl rounded-2xl space-y-2 p-3 pb-5 w-full bg-black bg-opacity-15 bg-blend-lighten"
    >
      <div
        class="relative z-10"
      >
        <h2
          class=" ml-4 pt-2 sm:text-base md:text-medium text-small text-white font-bold"
        >
          User1
        </h2>
        <figure
          class="ml-4 flex justify-start space-x-1"
        >
          <span
            class="sm:text-base md:text-2xl text:medium text-yellow"
          >
            ★
          </span>
          <span
            class="sm:text-base md:text-2xl text:medium text-yellow"
          >
            ★
          </span>
          <span
            class="sm:text-base md:text-2xl text:medium text-yellow"
          >
            ★
          </span>
          <span
            class="sm:text-base md:text-2xl text:medium text-lightgrey"
          >
            ★
          </span>
          <span
            class="sm:text-base md:text-2xl text:medium text-lightgrey"
          >
            ★
          </span>
        </figure>
        <h3
          class="mt-2 ml-4 text-white sm:text-base md:text-base text-md italic"
        >
          Great movie!
        </h3>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test of SearchHitCard > Snapshot test: SearchHitCard has not changed design 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="text-white italic flex flex-col justify-center items-center"
        style="height: 16rem; width: 10rem;"
      >
        <a>
          <figcaption
            class="h-10 flex flex-col justify-end w-52 text-base-small leading-5"
          >
            <h1
              class="text-center overflow-hidden line-clamp-2"
            >
              Sample Movie
            </h1>
          </figcaption>
          <figure
            class="flex justify-center hover:scale-105 items-center h-[95%] group"
          >
            <img
              alt="Sample Movie"
              class="max-h-full max-w-full group-hover:border-[rgb(41,93,227)] group-hover:border-2"
              src="https://example.com/poster.jpg"
              style="height: 14rem; max-width: 100%; border-radius: 1rem;"
            />
          </figure>
        </a>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="text-white italic flex flex-col justify-center items-center"
      style="height: 16rem; width: 10rem;"
    >
      <a>
        <figcaption
          class="h-10 flex flex-col justify-end w-52 text-base-small leading-5"
        >
          <h1
            class="text-center overflow-hidden line-clamp-2"
          >
            Sample Movie
          </h1>
        </figcaption>
        <figure
          class="flex justify-center hover:scale-105 items-center h-[95%] group"
        >
          <img
            alt="Sample Movie"
            class="max-h-full max-w-full group-hover:border-[rgb(41,93,227)] group-hover:border-2"
            src="https://example.com/poster.jpg"
            style="height: 14rem; max-width: 100%; border-radius: 1rem;"
          />
        </figure>
      </a>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
